Fix footer on small screens
Better alignment of the change lang form in the footer on small screens.
Closes https://github.com/dissemin/dissemin/issues/375.

Also make email link clickable in the footer

--- a/papers/static/style/style.css
+++ b/papers/static/style/style.css
@@ -759,6 +759,11 @@ input[type=checkbox]:checked ~ .stats_caption_label
     clear: both;
 }
 
+#change-lang-form-div
+{
+    text-align: center;
+}
+
 /* Departments list */
 
 #departmentsList {
